--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^3.10.0",
     "next": "10.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-hook-form": "^6.15.4"
   }
 }
